--- a/src/styles/global/_folds.scss
+++ b/src/styles/global/_folds.scss
@@ -76,6 +76,7 @@
   font-size: 1.14rem;
   text-transform: uppercase;
   letter-spacing: 1.6px;
+  @include col;
 }
 
 .fold__description {
